--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
     "styled-components": "^6.1.19",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
     "yup": "^1.6.1"
   },
