--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL= http://localhost:3000/web/api/v1
-# VITE_API_BASE_URL=http://192.168.10.125:3000/web/api/v1
+# VITE_API_BASE_URL= http://localhost:3000/web/api/v1
+VITE_API_BASE_URL=http://192.168.10.125:3000/web/api/v1
